--- a/notebooks/exploracion_airbnb.ipynb
+++ b/notebooks/exploracion_airbnb.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,18 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-24 14:33:35,481 - INFO - Conectado a Airbnb_mx\n",
-      "2025-10-24 14:33:36,651 - INFO - listings: 26401 registros\n",
-      "2025-10-24 14:33:44,191 - INFO - reviews: 1388226 registros\n",
-      "2025-10-24 14:34:52,420 - INFO - calendar: 9636365 registros\n",
-      "2025-10-24 14:34:53,961 - INFO - Conexión cerrada\n"
+      "2025-11-08 22:19:19,286 - INFO - Conectado a Airbnb_mx\n",
+      "2025-11-08 22:19:20,412 - INFO - listings: 26401 registros\n",
+      "2025-11-08 22:19:30,548 - INFO - reviews: 1388226 registros\n",
+      "2025-11-08 22:20:15,530 - INFO - calendar: 9636365 registros\n",
+      "2025-11-08 22:20:16,404 - INFO - Conexión cerrada\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
        "4               0.81  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "4        Svenja  Nice place, really close to te airport - Nice ...  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
        "4               7  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2019,7 +2019,7 @@
        "std               0.395388           2.125861  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2038,33 +2038,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-24 14:34:56,884 - INFO - Transformando listings: 26401 registros\n",
-      "2025-10-24 14:34:56,905 - INFO - Columna _id eliminada\n",
-      "2025-10-24 14:34:56,919 - INFO - Duplicados eliminados: 0\n",
-      "2025-10-24 14:34:56,995 - INFO - Filas con nulos eliminadas: 0\n",
-      "2025-10-24 14:34:57,032 - INFO - Precio normalizado en columna price\n",
-      "2025-10-24 14:34:57,035 - INFO - Precios categorizados\n",
-      "2025-10-24 14:34:57,516 - INFO - Columnas convertidas a JSON: ['host_verifications', 'amenities']\n",
-      "2025-10-24 14:34:57,517 - INFO - Listings transformado: 26401 registros finales\n",
-      "2025-10-24 14:34:57,726 - INFO - Transformando reviews: 1388226 registros\n",
-      "2025-10-24 14:34:57,808 - INFO - Columna _id eliminada\n",
-      "2025-10-24 14:34:57,902 - INFO - Duplicados eliminados: 0\n",
-      "2025-10-24 14:34:57,949 - INFO - Fechas convertidas en columna date\n",
-      "2025-10-24 14:34:58,049 - INFO - Variables de fecha derivadas\n",
-      "2025-10-24 14:34:58,050 - INFO - Reviews transformado: 1388226 registros finales\n",
-      "2025-10-24 14:34:58,051 - INFO - Transformando calendar: 9636365 registros\n",
-      "2025-10-24 14:34:58,123 - INFO - Columna _id eliminada\n",
-      "2025-10-24 14:34:59,728 - INFO - Duplicados eliminados: 0\n",
-      "2025-10-24 14:34:59,836 - INFO - Fechas convertidas en columna date\n",
-      "2025-10-24 14:35:00,292 - INFO - Variables de fecha derivadas\n",
-      "2025-10-24 14:35:00,292 - INFO - Calendar transformado: 9636365 registros finales\n"
+      "2025-11-08 22:20:17,718 - INFO - Transformando listings: 26401 registros\n",
+      "2025-11-08 22:20:17,733 - INFO - Columna _id eliminada\n",
+      "2025-11-08 22:20:17,745 - INFO - Duplicados eliminados: 0\n",
+      "2025-11-08 22:20:17,810 - INFO - Filas con nulos eliminadas: 0\n",
+      "2025-11-08 22:20:17,837 - INFO - Precio normalizado en columna price\n",
+      "2025-11-08 22:20:17,839 - INFO - Precios categorizados\n",
+      "2025-11-08 22:20:18,276 - INFO - Columnas convertidas a JSON: ['host_verifications', 'amenities']\n",
+      "2025-11-08 22:20:18,277 - INFO - Listings transformado: 26401 registros finales\n",
+      "2025-11-08 22:20:18,277 - INFO - Transformando reviews: 1388226 registros\n",
+      "2025-11-08 22:20:18,337 - INFO - Columna _id eliminada\n",
+      "2025-11-08 22:20:19,668 - INFO - Columna comments limpiada de caracteres HTML\n",
+      "2025-11-08 22:20:29,025 - INFO - Columna comments normalizada (ñ y tildes conservadas)\n",
+      "2025-11-08 22:20:29,237 - INFO - Duplicados eliminados: 0\n",
+      "2025-11-08 22:20:29,370 - INFO - Fechas convertidas en columna date\n",
+      "2025-11-08 22:20:29,466 - INFO - Variables de fecha derivadas\n",
+      "2025-11-08 22:20:29,466 - INFO - Reviews transformado: 1388226 registros finales\n",
+      "2025-11-08 22:20:29,484 - INFO - Transformando calendar: 9636365 registros\n",
+      "2025-11-08 22:20:29,545 - INFO - Columna _id eliminada\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Verificando columnas de fecha en reviews:\n",
+      "✓ Columnas de fecha presentes:\n",
+      "        date   año  mes  dia  trimestre\n",
+      "0 2016-01-08  2016    1    8          1\n",
+      "1 2016-01-09  2016    1    9          1\n",
+      "2 2016-01-10  2016    1   10          1\n",
+      "3 2016-01-13  2016    1   13          1\n",
+      "4 2016-01-15  2016    1   15          1\n",
+      "\n",
+      "Valores no nulos:\n",
+      "año          1388226\n",
+      "mes          1388226\n",
+      "dia          1388226\n",
+      "trimestre    1388226\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-08 22:20:29,861 - INFO - Duplicados eliminados: 0\n",
+      "2025-11-08 22:20:29,956 - INFO - Fechas convertidas en columna date\n",
+      "2025-11-08 22:20:30,394 - INFO - Variables de fecha derivadas\n",
+      "2025-11-08 22:20:30,394 - INFO - Calendar transformado: 9636365 registros finales\n"
      ]
     },
     {
@@ -2087,6 +2117,16 @@
     "# Transformar cada dataset\n",
     "df_listings_limpio = transformador.transformar_listings(df_listings)\n",
     "df_reviews_limpio = transformador.transformar_reviews(df_reviews)\n",
+    "# Después de: df_reviews_limpio = transformador.transformar_reviews(df_reviews)\n",
+    "print(\"\\nVerificando columnas de fecha en reviews:\")\n",
+    "if all(col in df_reviews_limpio.columns for col in ['año', 'mes', 'dia', 'trimestre']):\n",
+    "    print(\"✓ Columnas de fecha presentes:\")\n",
+    "    print(df_reviews_limpio[['date', 'año', 'mes', 'dia', 'trimestre']].head())\n",
+    "    print(f\"\\nValores no nulos:\")\n",
+    "    print(df_reviews_limpio[['año', 'mes', 'dia', 'trimestre']].notna().sum())\n",
+    "else:\n",
+    "    print(\"✗ Faltan columnas de fecha derivadas\")\n",
+    "    print(f\"Columnas presentes: {df_reviews_limpio.columns.tolist()}\")\n",
     "df_calendar_limpio = transformador.transformar_calendar(df_calendar)\n",
     "\n",
     "print(f\"\\n✓ Datos transformados:\")\n",
@@ -2097,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2241,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2274,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2288,9 +2328,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-24 14:35:01,572 - INFO - Cargados 26401 registros a tabla listings en SQLite\n",
-      "2025-10-24 14:35:06,600 - INFO - Cargados 1388226 registros a tabla reviews en SQLite\n",
-      "2025-10-24 14:35:28,151 - INFO - Cargados 9636365 registros a tabla calendar en SQLite\n"
+      "2025-11-08 22:20:31,457 - INFO - Cargados 26401 registros a tabla listings en SQLite\n",
+      "2025-11-08 22:20:35,733 - INFO - Cargados 1388226 registros a tabla reviews en SQLite\n",
+      "2025-11-08 22:20:55,131 - INFO - Cargados 9636365 registros a tabla calendar en SQLite\n"
      ]
     },
     {
@@ -2305,21 +2345,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-24 14:36:02,079 - INFO - Cargados 26401 registros a listings_limpio.xlsx\n"
+      "2025-11-08 22:21:16,099 - INFO - ✓ Exportados 26,401 registros a listings_limpio.xlsx\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reviews tiene 1,388,226 registros, exportando muestra de 100,000...\n"
+      "Reviews tiene 1,388,226 registros, exportando muestra de 1,000,000...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-24 14:36:12,740 - INFO - Cargados 100000 registros a reviews_muestra.xlsx\n"
+      "2025-11-08 22:22:51,025 - INFO - ✓ Exportados 1,000,000 registros a reviews_muestra.xlsx\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calendar tiene 9,636,365 registros, exportando muestra de 1,000,000...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-08 22:24:09,169 - INFO - ✓ Exportados 1,000,000 registros a calendar_muestra.xlsx\n"
      ]
     },
     {
@@ -2347,41 +2401,43 @@
     "cargador.cargar_a_excel(df_listings_limpio, 'listings_limpio.xlsx')\n",
     "\n",
     "# Reviews: solo muestra si es muy grande\n",
-    "if len(df_reviews_limpio) > 100000:\n",
-    "    print(f\"Reviews tiene {len(df_reviews_limpio):,} registros, exportando muestra de 100,000...\")\n",
-    "    df_reviews_muestra = df_reviews_limpio.head(100000)\n",
+    "if len(df_reviews_limpio) > 1000000:\n",
+    "    print(f\"Reviews tiene {len(df_reviews_limpio):,} registros, exportando muestra de 1,000,000...\")\n",
+    "    df_reviews_muestra = df_reviews_limpio.head(1000000)\n",
     "    cargador.cargar_a_excel(df_reviews_muestra, 'reviews_muestra.xlsx')\n",
     "else:\n",
     "    cargador.cargar_a_excel(df_reviews_limpio, 'reviews_limpio.xlsx')\n",
+    "\n",
+    "# Calendar: solo muestra si es muy grande\n",
+    "if len(df_calendar_limpio) > 1000000:\n",
+    "    print(f\"Calendar tiene {len(df_calendar_limpio):,} registros, exportando muestra de 1,000,000...\")\n",
+    "    df_calendar_muestra = df_calendar_limpio.head(1000000)\n",
+    "    cargador.cargar_a_excel(df_calendar_muestra, 'calendar_muestra.xlsx')\n",
+    "else:\n",
+    "    cargador.cargar_a_excel(df_calendar_limpio, 'calendar_limpio.xlsx')\n",
     "\n",
     "print(\"\\n✓ Datos cargados exitosamente\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Verificando carga en SQLite...\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-10-24 14:36:12,974 - INFO - Verificación: 26401 registros en tabla listings\n",
-      "2025-10-24 14:36:13,814 - INFO - Verificación: 1388226 registros en tabla reviews\n",
-      "2025-10-24 14:36:13,900 - INFO - Verificación: 9636365 registros en tabla calendar\n"
+      "2025-11-08 22:24:09,231 - INFO - Verificación: 26401 registros en tabla listings\n",
+      "2025-11-08 22:24:09,288 - INFO - Verificación: 1388226 registros en tabla reviews\n",
+      "2025-11-08 22:24:09,375 - INFO - Verificación: 9636365 registros en tabla calendar\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Verificando carga en SQLite...\n",
       "\n",
       "✓ Base de datos SQLite: data/airbnb.db\n",
       "  • listings:      26,401 registros\n",
